# clog

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: clog.pc.in  clogConfig.cmake.in
include/: clog.h
